# riostu

./: Cargo.toml  config.toml  drop.sql  identity.p12  load.sql  localhost.crt  logger.toml  spec.tex
openid-connect/: Cargo.toml
openid-connect/src/: lib.rs
openid-connect/src/request/: display.rs  error.rs  mod.rs  prompt.rs  response_type.rs  scope.rs
openid-connect/src/response/: mod.rs
sql/: down.sql  up.sql
src/: auth.rs  errorcapture.rs  errors.rs  logging.rs  login.rs  macros.rs  main.rs  models.rs  monitoring.rs  request.rs  schema.rs  stringbuilder.rs
src/google/: discovery.rs  error.rs  keys.rs  mod.rs
src/providers/: auth.rs  database.rs  errorcapture.rs  logging.rs  mod.rs  monitoring.rs
web/: index.html
web/css/: bootstrap.min.css
web/js/: jquery-3.2.1.js
web/new/: index.html
webfinger/: Cargo.toml
webfinger/src/: error.rs  lib.rs
