[package]
name = "riostu"
version = "0.1.0"
authors = ["Stuart <stu@reilly-family.co.uk>"]

[dependencies]
slog = { version = "*", features = ["max_level_debug"] }
slog-term = "*"
slog-async = "*"
slog-perf = "*"
slog-config = "*"
iron = "*"
staticfile = "*"
mount = "*"
urlencoded = "*"
hyper-native-tls = "*"
hyper = "*"
config = "*"
error-chain = "*"
diesel = { version = "*", features = ["postgres"] }
diesel_codegen = { version = "*", features = ["postgres"] }
bodyparser = "*"
serde = "*"
serde_derive = "*"
r2d2 = "*"
r2d2-diesel = "*"
