[package]
name = "riostu"
version = "0.1.0"
authors = ["Stuart <stu@reilly-family.co.uk>"]

[dependencies]
slog = { version = "*", features = ["max_level_trace"] }
slog-term = "*"
slog-async = "*"
slog-perf = "*"
slog-config = "*"
iron = "*"
staticfile = "*"
mount = "*"
urlencoded = "*"
hyper-native-tls = "*"
hyper = "*"
config = "*"
error-chain = "*"
bodyparser = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
r2d2 = "*"
r2d2_postgres = "*"
postgres = "*"
base64 = "*"
jsonwebtoken = "*"
chrono = { version = "*", features = ["serde"] }
