[package]
name = "riostu"
version = "0.1.0"
authors = ["Stuart <stu@reilly-family.co.uk>"]

[dependencies]
slog = { version = "2.0", features = ["max_level_trace"] }
slog-term = "2.2"
slog-async = "2.1"
slog-perf = "0.1"
slog-config = "0.4"
iron = "0.5"
staticfile = "0.4"
mount = "0.3"
urlencoded = "0.5"
hyper-native-tls = "0.2"
hyper = "0.10"
config = "0.7"
error-chain = "0.10"
bodyparser = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2 = "0.7"
r2d2_postgres = "0.13"
postgres = "0.15"
base64 = "0.6"
jsonwebtoken = "*"
chrono = { version = "0.4", features = ["serde"] }
