[package]
name = "openid_connect"
version = "0.1.0"
authors = ["Stuart Reilly <stu@reilly-family.co.uk>"]

[dependencies]
hyper = "0.10"
hyper-native-tls = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
error-chain = "0.10"
rand = "0.3"
base64 = "0.6"
itertools = "0.6"
